Clean up deprecated constructors and method calls Use valueOf() or parseInt() instead of deprecated Integer, Boolean, and Float constructors. Replace Graphics.finalize() with dispose(). Update @Deprecated annotation and remove redundant String/Integer allocations in clone methods.